--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ document.addEventListener('keypress', playsound)
 document.addEventListener('keyup', stopsound)
 
 man.addEventListener('click', playsound)
-man.addEventListener('')
+man.addEventListener('touchend',stopsound)
 
 
 function playsound(e){
